Alteração de nome e alteração na foto de perfil

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="logo">
-                <span class="logo-text">JV</span>
+                <span class="logo-text">João Victor Vieira Paes</span>
             </div>
             <ul class="nav-menu">
                 <li><a href="#inicio" class="nav-link">Início</a></li>
@@ -57,10 +57,7 @@
             <div class="hero-image">
                 <div class="profile-card">
                     <div class="profile-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-                            <path
-                                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z" />
-                        </svg>
+                        <img src="profile.jpg" alt="joaovictorvp">
                     </div>
                     <div class="card-stats">
                         <div class="stat">
